# c_mk

00/: 01_c11.c  02_style_bad.c  03_style_good.c  CMakeLists.txt  note_00.txt
01/: 00_type.c  01_limit.c  02_format.c  03_char.c  04_wchar_t.c  05_float.c  06_var.c  07_const.c  08_operator.c  09_operator.c  10_flow.c  CMakeLists.txt  note_01.txt  output.c
02/: 00_func.c  01_func.c  02_func_proto.c  03_var.c  04_var.c  05_varargs.c  06_recursive.c  07_hanoii.c  08_include.c  09_header.c  10_macro.c  11_macro.c  12_cond.c  13_println.c  CMakeLists.txt  note_02.txt
02/include/: 09_util.h
02/src/: 09_util.c
03/: 00_arr.c  01_arr.c  02_arr.c  03_char_arr.c  04_char_arr.c  05_char_arr.c  06_arr_len.c  07_func_arg.c  08_arr2.c  09_arr2.c  10_arr2.c  11_arr_shuffle.c  12_arr_shuffle.c  13_arr_sort.c  CMakeLists.txt  note_03.txt
04/: 00_ptr.c  01_read_only.c  02_read_only.c  03_read_only.c  04_invalid.c  05_invalid.c  06_op.c  07_op.c  08_op.c  09_arr.c  10_value.c  11_return.c  12_return.c  13_heap.c  14_heap.c  15_malloc.c  16_calloc.c  17_realloc.c  18_swap.c  19_swap.c  20_swap.c  21_swap.c  22_sort_hoare.c  CMakeLists.txt  note_04.txt
05/: 00_struct.c  01_nested.c  02_typedef.c  03_align.c  04_union.c  05_union.c  06_enum.c  07_byteorder.c  08_linked_list.c  CMakeLists.txt  note_05.txt
06_str/: 00_char_type.c  01_cast.c  02_cast.c  03_cast.c  04_length.c  05_compare.c  06_str_sort.c  07_str_find.c  08_str_find.c  09_str_find.c  10_split.c  11_concat.c  12_copy.c  13_copy.c  14_memsety.c  15_copy.c  16_move.c  17_move.c  18_safe.c  19_mbs.c  CMakeLists.txt  note_06.txt
07_time/: 00_time.c  01_time_t.c  02_millis.c  03_calendar.c  04_gmt.c  05_format.c  06_format.c  07_parse.c  10_diff.c  11_diff.c  CMakeLists.txt  note_07.txt
08_file/: 00_file.c  01_errno.c  02_buffer.c  03_read_char.c  04_write_char.c  05_read_file.c  06_copy_file.c  07_read_line.c  08_read_line.c  09_copy_file.c  10_echo.c  11_echo.c  12_serialize.c  13_serialize.c  14_copy_file.c  15_freopen.c  16_dup.c  17_remove.c  18_rename.c  19_tmpfile.c  20_file_size.c  21_isdir.c  22_ftell.c  23_fseek.c  CMakeLists.txt  note_08.txt
08_file/static/: 12_user.txt  13_user.txt  poet.txt
09_task/: 00_thread.c  01_thread.c  02_thread.c  03_safe.c  04_visibility.c  05_reorder.c  CMakeLists.txt  note_09.txt
10_build/: 00_demo.i  00_demo.s  CMakeLists.txt  note_10.txt
10_build/demo10_static/: CMakeLists.txt
10_build/demo10_static/include/: add.h  sub.h
10_build/demo10_static/lib/: add.lib  sub.lib
10_build/demo10_static/src/: sub.c
10_build/demo20_dynamic/: CMakeLists.txt  main.c
10_build/demo20_dynamic/src/: add.c
11_conan/: CMakeLists.txt  conanfile.txt
